--- a/index.html
+++ b/index.html
@@ -11,12 +11,28 @@
 <body>
 <h1>Welcome to the Puppy Adoption Center (PAC) </h1>
 
+
+
+<form id="puppy-add">
+    <br>
+  <input type="text" name="name" id="name">
+    <br>
+  <select type="breed-id" id="breed-id">
+    <option value="112"> dog </option>
+
+  </select>
+    <br>
+  <input type="submit" name="send" value="create puppy!" id="button">
+</form>
+
+<br>
+<br>
 <h4>Our Puppies:</h4>
 
 <ul class="puppy-list">
 
 </ul>
-
+<button class="refresh"> refresh </button>
 </body>
 
 </html>
